
	* commit.c (commit_filesdoneproc): Remove trailing blanks.
	(commit) [CLIENT_SUPPORT]: Remove unnecessary (and local-shadowing)
	declaration of `err'.
	Rename global `tag' to `saved_tag' to avoid overshadowing `tag'
	parameters of three functions.
	Rename global `message' to `saved_message' to avoid overshadowing
	`message' parameter of a function.

1998-05-12  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit_filesdoneproc): #if 0 the new code until it can
	be fixed.

	* commit.c (commit_filesdoneproc): Add comment explaining last
	change.

1998-05-12  Jim Meyering  <meyering@ascend.com>

	* commit.c (commit_filesdoneproc): Call mkmodules not just when
	committing a file directly under CVSROOT, but also when committing
	files in subdirectories of CVSROOT.

1998-05-08  Jim Meyering  <meyering@ascend.com>

	* filesubr.c (xreadlink):  NUL-terminate the symbolic link name.
	Use a much smaller initial buffer length.
	Test errno only if readlink fails.
	Use xstrdup then free the original link name so we don't waste space.

1998-05-02  Jim Meyering  <meyering@ascend.com>

	* rcs.c (rcsbuf_getword): Fix off-by-one error that would result in
	an abort (the first one in rcsbuf_getkey) when operating on on some
	,v files with over 8192 bytes of tag and branch info.

1998-05-04  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (ann): New tests ann-12 and ann-13 test for specifying
	a numeric branch.

1998-05-02  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c: Add comments about getting rid of rcsbuf_getid,
	rcsbuf_getword, and rcsbuf_getstring.

	* sanity.sh (abspath): Revise the workarounds to deal with exit
	status.

1998-04-30  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (abspath): Work around the "cannot rename" bug.

1998-04-27  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* classify.c (Classify_File): Add comments about checking whether
	command name is "update".

1998-04-22  Jim Kingdon  <kingdon@harvey.cyclic.com>
