@@ -7,6 +7,7 @@
 	parameters of three functions.
 	Rename global `message' to `saved_message' to avoid overshadowing
 	`message' parameter of a function.
+	Rename global `ulist' to `saved_ulist' and move dcl up with others.
 
 1998-05-12  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
